--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" /> 
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>yes</title>
   </head>
@@ -10,3 +11,10 @@
     <!-- built files will be auto injected 生成的文件将被自动注入。-->
   </body>
 </html>
+
+<style>
+  html body{
+    padding: 0;
+    margin: 0;
+  }
+</style>
